# nagim-clinical-data-sharing

./: README.md
variant-counts/: .gitignore  1_generate_internal.py  2_generate_vep.py  3_generate_aggregate.py  4_analysis_by_gene.py  pyproject.toml  sample_vep_output.json  variant-counts-aggregate.parquet  vep_data
variant-counts/aggregator/: aggregate_with_vep.py  lab_data_read_and_normalise.py
variant-counts/analysis/: README.md  duckdb_analysis.py  parquet_vep_process.py  polars_analysis.py
variant-counts/common/: folders.py  known_contigs.py  reference_data_36_contigs.py  reference_data_37_contigs.py  reference_data_38_contigs.py  sources.py  vcf_aggregate_counts_vep_parquet_types.py
